--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,46 @@ license = Perl_5
 copyright_holder = John SJ Anderson
 copyright_year   = 2014
 
-[@GENEHACK]
+[GatherDir]
+exclude_match    = ^release.*
+exclude_filename = dist.ini
 
+[@Filter]
+-bundle = @Basic
+-remove = GatherDir
+-remove = Readme
+
+[Git::NextVersion]
+
+[AutoPrereqs]
 [Prereqs]
 IPC::System::Simple = 0
+[GithubMeta]
+homepage = https://github.com/genehack/app-gitgitr
+user = genehack
+issues = 1
+[InstallGuide]
+[MetaConfig]
+[MetaJSON]
+[NextRelease]
+[PkgVersion]
+[PodSyntaxTests]
+[PodCoverageTests]
+[PodWeaver]
+[ReadmeAnyFromPod / ReadmePodInRoot]
+type = markdown
+filename = README.md
+location = build
+source_filename = bin/gitgitr
+[CopyFilesFromBuild]
+copy = README.md
+[Git::Tag]
+[Git::Commit]
+[Twitter]
+
+[Run::BeforeBuild]
+run = rm -f Makefile.PL
+
+[Run::AfterBuild]
+run = cp %d/Makefile.PL ./
+run = git status --porcelain | grep 'M Makefile.PL' && git commit -m 'auto-committed by dist.ini' Makefile.PL || echo Makefile.PL up to date
