Switch homepage to pretty version

--- a/dist.ini
+++ b/dist.ini
@@ -19,7 +19,7 @@ exclude_filename = dist.ini
 [Prereqs]
 IPC::System::Simple = 0
 [GithubMeta]
-homepage = https://github.com/genehack/app-gitgitr
+homepage = http://genehack.github.io/app-gitgitr/
 user = genehack
 issues = 1
 [InstallGuide]
