cross-platform auto-commit in dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -46,4 +46,4 @@ run = rm -f Makefile.PL
 
 [Run::AfterBuild]
 run = cp %d/Makefile.PL ./
-run = git status --porcelain | grep 'M Makefile.PL' && git commit -m 'auto-committed by dist.ini' Makefile.PL || echo Makefile.PL up to date
+run = git status --porcelain | grep "M Makefile.PL" && git commit -m "auto-committed by dist.ini" Makefile.PL || echo Makefile.PL up to date
