--- a/dist.ini
+++ b/dist.ini
@@ -2,11 +2,13 @@ name    = App-GitGitr
 author  = John SJ Anderson <genehack@genehack.org>
 license = Perl_5
 copyright_holder = John SJ Anderson
-copyright_year   = 2014
+copyright_year   = 2015
+main_module      = bin/gitgitr
 
 [GatherDir]
 exclude_match    = ^release.*
 exclude_filename = dist.ini
+exclude_filename = INSTALL
 
 [@Filter]
 -bundle = @Basic
@@ -30,15 +32,11 @@ issues = 1
 [PodSyntaxTests]
 [PodCoverageTests]
 [PodWeaver]
-[ReadmeAnyFromPod / ReadmePodInRoot]
-type = markdown
-filename = README.md
-location = build
-source_filename = bin/gitgitr
 [CopyFilesFromBuild]
-copy = README.md
-[Git::Tag]
+copy = INSTALL
 [Git::Commit]
+add_files_in = releases/
+[Git::Tag]
 [Twitter]
 
 [Run::BeforeBuild]
@@ -47,3 +45,6 @@ run = rm -f Makefile.PL
 [Run::AfterBuild]
 run = cp %d/Makefile.PL ./
 run = git status --porcelain | grep "M Makefile.PL" && git commit -m "auto-committed by dist.ini" Makefile.PL || echo Makefile.PL up to date
+
+[Run::BeforeRelease]
+run = mv %a ./releases/
