--- a/dist.ini
+++ b/dist.ini
@@ -34,10 +34,6 @@ issues = 1
 [PodWeaver]
 [CopyFilesFromBuild]
 copy = INSTALL
-[Git::Commit]
-add_files_in = releases/
-[Git::Tag]
-[Twitter]
 
 [Run::BeforeBuild]
 run = rm -f Makefile.PL
@@ -46,5 +42,9 @@ run = rm -f Makefile.PL
 run = cp %d/Makefile.PL ./
 run = git status --porcelain | grep "M Makefile.PL" && git commit -m "auto-committed by dist.ini" Makefile.PL || echo Makefile.PL up to date
 
-[Run::BeforeRelease]
+[Run::Release]
 run = mv %a ./releases/
+[Git::Commit]
+add_files_in = releases/
+[Git::Tag]
+[Twitter]
