--- a/dist.ini
+++ b/dist.ini
@@ -29,6 +29,8 @@ issues = 1
 [MetaJSON]
 [NextRelease]
 [PkgVersion]
+[Test::Compile]
+bail_out_on_fail = 1
 [PodSyntaxTests]
 [PodCoverageTests]
 [PodWeaver]
