--- a/dist.ini
+++ b/dist.ini
@@ -1,52 +1,14 @@
-name    = App-GitGitr
-author  = John SJ Anderson <genehack@genehack.org>
-license = Perl_5
+name             = App-GitGitr
+author           = John SJ Anderson <genehack@genehack.org>
+license          = Perl_5
 copyright_holder = John SJ Anderson
 copyright_year   = 2015
 main_module      = bin/gitgitr
 
-[GatherDir]
-exclude_match    = ^release.*
-exclude_filename = dist.ini
-exclude_filename = INSTALL
+[@GENEHACK]
+homepage = http://genehack.github.io/app-gitgitr/
 
-[@Filter]
--bundle = @Basic
--remove = GatherDir
--remove = Readme
-
-[Git::NextVersion]
-
-[AutoPrereqs]
 [Prereqs]
 IPC::System::Simple = 0
-[GithubMeta]
-homepage = http://genehack.github.io/app-gitgitr/
-user = genehack
-issues = 1
-[InstallGuide]
-[MetaConfig]
-[MetaJSON]
-[NextRelease]
-[PkgVersion]
-[Test::Compile]
-bail_out_on_fail = 1
-[PodSyntaxTests]
-[PodCoverageTests]
-[PodWeaver]
-[CopyFilesFromBuild]
-copy = INSTALL
 
-[Run::BeforeBuild]
-run = rm -f Makefile.PL
 
-[Run::AfterBuild]
-run = cp %d/Makefile.PL ./
-run = git status --porcelain | grep "M Makefile.PL" && git commit -m "auto-committed by dist.ini" Makefile.PL || echo Makefile.PL up to date
-
-[Run::Release]
-run = mv %a ./releases/
-[Git::Commit]
-add_files_in = releases/
-[Git::Tag]
-[Twitter]
