--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
 name             = App-GitGitr
-author           = John SJ Anderson <genehack@genehack.org>
+author           = John SJ Anderson <john@genehack.org>
 license          = Perl_5
 copyright_holder = John SJ Anderson
-copyright_year   = 2016
+copyright_year   = 2020
 main_module      = bin/gitgitr
 
 [@GENEHACK]
