Update repo metadata

--- a/dist.ini
+++ b/dist.ini
@@ -5,8 +5,14 @@ copyright_holder = John SJ Anderson
 copyright_year   = 2020
 main_module      = bin/gitgitr
 
+[MetaResources]
+homepage        = https://git.genehack.net/genehack/app-gitgitr
+bugtracker.web  = https://git.genehack.net/genehack/app-gitgitr
+repository.url  = https://git.genehack.net/genehack/app-gitgitr
+repository.web  = https://git.genehack.net/genehack/app-gitgitr
+repository.type = git
+
 [@GENEHACK]
-homepage = http://genehack.github.io/app-gitgitr/
 
 [Prereqs]
 IPC::System::Simple = 0
